# SIO

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PRD-competitive-enhancement.md  PRD-pipeline-integrity-remediation.md  PRD-skill-generation-pipeline.md  PRD.md  README.md  deep_research.db  pyproject.toml  ruff.toml  tasks.md
.devkid/: config.json
.dk/: tasks.md
.github/workflows/: ci.yml
course-sio/: _base.html  index.html
course-sio/briefs/: 01-what-sio-does.md  02-meet-the-actors.md  03-sessions-to-patterns.md  04-the-dspy-brain.md  05-closing-the-loop.md
course-sio/modules/: 01-what-sio-does.html  02-meet-the-actors.html  03-sessions-to-patterns.html  04-the-dspy-brain.html  05-closing-the-loop.html
docs/: AMPLIFY_GUIDE.md  CLI_REFERENCE.md  SIO_PHILOSOPHY.md  agent-recognizers.md  architecture.md  briefing-store-offsession.md  configuration.md  cookbook-2026-05-15.md  cookbook.md  dspy_research_and_audit_2026-06-20.md  experiment-cohorts.md  gen_cli_reference.sh  getting-started.md  live-sessions.md  optimizer-guide.md  sio-feature-infographic.html  troubleshooting.md  user-guide.md
docs/use-cases/: README.md  cost-performance-regression-hunt.md  cross-session-continuity.md  debugging-flaky-tool.md  onboarding-to-codebase.md  pre-merge-pr-safety.md  rule-lifecycle.md  validating-a-config-change.md  workflow-discovery-and-promotion.md
plans/: skill-generation-pipeline.md
prds/: 001-skill-side-llm-delegation.md  002-local-lm-backend.md  004-install-orchestration-regression.md  005-violated-rule-to-pretooluse-hook.md  006-fresh-machine-install-handoff.md  README.md  prd-corpus-problem-miner.md  prd-fresh-machine-install-handoff.md  prd-install-orchestration-regression.md  prd-local-lm-backend.md  prd-skill-side-llm-delegation.md  prd-violated-rule-to-pretooluse-hook.md
research/: competitive-landscape-self-improving-agents.md  implementation-specs-detailed.md
research/papers/: 2302.13439.json  2302.13439.md  2303.11366.json  2303.11366.md  2303.17651.json  2303.17651.md  2305.11738.json  2305.11738.md  2409.12917.json  2409.12917.md  README.md
rules/tools/: sio.md
scripts/: autopsy.py  autoresearch_cron.py  install-skills.sh  install_autoresearch_systemd.sh  migrate_004.py  migrate_split_brain.py  monitor.py  remap_ground_truth_slugs.py  resolve.py  self_test.sh  tag_errors.py
skills/: README.md
skills/sio-apply/: SKILL.md
skills/sio-briefing/: SKILL.md
skills/sio-budget/: SKILL.md
skills/sio-codify-workflow/: SKILL.md
skills/sio-discover/: SKILL.md
skills/sio-distill/: SKILL.md
skills/sio-export/: SKILL.md
skills/sio-feedback/: SKILL.md
skills/sio-flows/: SKILL.md
skills/sio-health/: SKILL.md
skills/sio-live/: SKILL.md
skills/sio-optimize/: SKILL.md
skills/sio-promote-flow/: SKILL.md
skills/sio-promote-rule/: SKILL.md
skills/sio-recall-flow/: SKILL.md
tests/: conftest.py
(+475 files in other folders)
