[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "self-improving-organism"
version = "0.1.3"
description = "Self-Improving Organism — closed-loop optimization of AI coding agents (Claude Code, with adapters planned for other harnesses)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["ai", "agent", "claude-code", "dspy", "self-improvement", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "dspy>=3.1.3",
    "numpy>=1.24",
    "fastembed>=0.2",
    "click>=8.1",
    "rich>=13.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
openai = ["openai>=1.0"]
parquet = ["pandas>=2.0"]
all = ["self-improving-organism[torch,openai,parquet]"]
test = [
    "pytest>=8",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
dev = [
    "pytest>=8",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/gyasis/SIO"
Repository = "https://github.com/gyasis/SIO"
Issues = "https://github.com/gyasis/SIO/issues"

[project.scripts]
sio = "sio.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/sio"]
# Bundle the source-of-truth bootstrap content (skills + rules) inside the
# Python package so `sio init` can stage them into a user's harness config
# directory via importlib.resources, regardless of how the wheel was installed.
force-include = { "skills" = "sio/_bootstrap/skills", "rules" = "sio/_bootstrap/rules" }

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"
